# gas

./: Cargo.toml  Dockerfile  Makefile  README.md  build.rs
.github/workflows/: deploy.yaml
.zed/: settings.json
examples/: client.rs
proto/auth/: auth.proto  encrypt.proto
proto/unaryecho/: echo.proto
src/: main.rs  middleware.rs
src/auth/: constants.rs  errors.rs  grpc.rs  mod.rs  service.rs
src/http/: client.rs
