[package]
name = "gomaluum-auth"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gomaluum-auth"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.14.1"
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "*"
