[package]
name = "gas"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gomaluum-auth"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.14.1"
tonic = "0.14.2"
tonic-prost = "0.14.2"
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "deflate"] }
cookie_store = "0.21"
url = "2.5"
once_cell = "1.19"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
console = "0.16.1"

[build-dependencies]
tonic-prost-build = "*"
